# breezi

./: .env  .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  ui.config.json  vite.config.ts
bindings/: ErrorCode.ts  ErrorReason.ts  ErrorResponse.ts  Invalidation.ts  UserRegistration.ts  index.ts  user.schema.json  user.schema.ts
migrations/: 20250822205929_create_users_table.sql
src/: App.css  App.tsx  index.css
src-backend/: main.rs
src-backend/logic/: bindings.rs  mod.rs  sqlite.rs  validation.rs
src-backend/model/: config.rs  errors.rs  mod.rs  user.rs
src-backend/routes/: auth.rs  mod.rs  spa.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/form/: field.tsx
src/components/ui/: text-field.tsx
